# live-agent

./: .gitignore  AGENTS.md  LOM_INDEX_FOR_CODEX.md  README.md  llms.txt  pyproject.toml
docs/: architecture.md  capability_matrix.md  codex_project_brief.md  mcp_tool_spec.md  plugin_parameter_limits.md  project_goal.md  protocol.md  remote_script_threading.md  roadmap.md
docs/research/: lombom.md
remote_scripts/AbletonLiveBridge/: __init__.py  bridge.py  dispatcher.py  errors.py  protocol.py  serializers.py
remote_scripts/AbletonLiveBridge/commands/: arrangement.py  clips.py  devices.py  registry.py  resolvers.py  selection.py  song.py
scripts/: generate_capability_report.py  install_remote_script.py  smoke_test_live_connection.py
src/ableton_live_client/: __init__.py  models.py  orm.py  transport.py
src/ableton_mcp_server/: server.py
tests/: test_bridge_handlers.py  test_client_facade.py  test_mcp_server_surface.py
tests/fake_live/: fake_objects.py
