[project]
name = "ableton-live-mcp-seed"
version = "0.0.1"
description = "Arrangement-first Ableton Live bridge and MCP server scaffold"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]
docs = [
  "firecrawl-py>=4.0.0",
  "pymupdf>=1.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]
